--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -874,10 +874,10 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-2">
-                <label>@L["ProfitShare"]</label>
+                <label>@L["ProfitShare"] %</label>
             </div>
             <div class="col-5">
-                <InputNumber class="form-control" @bind-Value="@EditGroupBuyDto.ProfitShare" />
+                <InputNumber class="form-control" @bind-Value="@EditGroupBuyDto.ProfitShare" max="100" />
             </div>
         </div>
          <div class="row">
