--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -563,10 +563,10 @@
                     </div>
                     <div class="row">
                         <div class="col-2 text-end">
-                            <label class="pt-2">@L["ShareProfit"]</label>
+                            <label class="pt-2">@L["ShareProfit"] %</label>
                         </div>
                         <div class="col-4">
-                            <InputNumber class="form-control" TValue="float" @bind-Value="@CreateItemDto.ShareProfit" />
+                            <InputNumber class="form-control"  TValue="float" @bind-Value="@CreateItemDto.ShareProfit" max="100" />
                         </div>
                     </div>
                     <div class="row">
