--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletList.razor
@@ -1,5 +1,5 @@
 ﻿@page "/TenantManagement/TenantWalletList"
-@using Kooco.Pikachu.Tenants.TenantWallet
+@using Kooco.Pikachu.Tenants.Tabulations
 @attribute [Authorize(PikachuPermissions.TenantWallet.Default)]
 @inherits FormManagement<FormEntranceBase, TenantWalletResultDto>
 
