--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
@@ -21,7 +21,7 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<h3>@L["EditFreebie"]</h3>
+<Heading Size="HeadingSize.Is3" @onclick="NavigateToList" style="cursor: pointer;">@L["EditFreebie"]</Heading>
 <Card>
     <CardBody>
         <div class="card-body">
