--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -54,7 +54,7 @@
         height: 9.55rem;
     }
 </style>
-<h3>@L["EditGroupBuy"]</h3>
+ <Heading Size="HeadingSize.Is3" @onclick="NavigateToGroupBuyList" style="cursor: pointer;">@L["EditGroupBuy"]</Heading>
 <LoadingIndicator @ref="Loading" FullScreen FadeIn></LoadingIndicator>
 <Card>
     <CardBody>
