--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -38,7 +38,7 @@
 <LoadingIndicator @ref="Loading" FullScreen></LoadingIndicator>
 
 <div>
-    <h3>@L["NewItem"]</h3>
+     <Heading Size="HeadingSize.Is3" @onclick="NavigateToItemList" style="cursor: pointer;">@L["NewItem"]</Heading>
 </div>
 <Card>
     <CardBody>
