--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -36,7 +36,7 @@
 
 <LoadingIndicator @ref="Loading" FullScreen></LoadingIndicator>
 <div>
-    <h3>@L[PikachuResource.EditItem]</h3>
+   <Heading Size="HeadingSize.Is3" @onclick="NavigateToItemList" style="cursor: pointer;">@L[PikachuResource.EditItem]</Heading>
 </div>
 <Card>
     <CardBody>
