--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
@@ -18,7 +18,7 @@
 <Div>
     <Row>
         <Column ColumnSize="ColumnSize.Is6">
-            <h3 class="text-dark">@L["UseSettings"]</h3>
+             <Heading Size="HeadingSize.Is3" @onclick="NavigateToList" style="cursor: pointer;" class="text-dark">@L["UseSettings"]</Heading>
         </Column>
 
     </Row>
