--- a/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/NewDiscountCode.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/NewDiscountCode.razor
@@ -20,11 +20,11 @@
         <Column ColumnSize="ColumnSize.Is6">
             @if (Id != Guid.Empty)
             {
-                <h3 class="text-dark">@L["UpdateDiscountCode"]</h3>
+                <Heading Size="HeadingSize.Is3" @onclick="NavigateToList" style="cursor: pointer;">@L["UpdateDiscountCode"]</Heading>
             }
             else
             {
-                <h3 class="text-dark">@L["NewDiscountCode"]</h3>
+                <Heading Size="HeadingSize.Is3" @onclick="NavigateToList" style="cursor: pointer;">@L["NewDiscountCode"]</Heading>
             }
         </Column>
 
