--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -292,7 +292,7 @@
 
 
     <div style="@($"display: {(loading ? "none" : "block")};" )">
-    <h3>@L["OrderDetails"]</h3>
+    <Heading Size="HeadingSize.Is3" @onclick="NavigateToList" style="cursor: pointer;">@L["OrderDetails"]</Heading>
     <div class="row">
         <div class="col-md-6 col-sm-12">
             <Card>
