--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -11,7 +11,7 @@
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JSRuntime
 @attribute [Authorize]
-<h3>@L["SetItem"]</h3>
+ <Heading Size="HeadingSize.Is3" @onclick="NavigateToItemList" style="cursor: pointer;">@L["SetItem"]</Heading>
 
 <Card>
     <CardBody>
