--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditGetSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditGetSetting.razor
@@ -19,7 +19,7 @@
 <Div>
     <Row>
         <Column ColumnSize="ColumnSize.Is6">
-            <h3 class="text-dark">@L["GetSettings"]</h3>
+            <Heading Size="HeadingSize.Is3" @onclick="NavigateToList" style="cursor: pointer;" class="text-dark">@L["GetSettings"]</Heading>
         </Column>
 
     </Row>
